--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/article.div.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/article.div.jspx
@@ -8,15 +8,22 @@
   <mm:import externid="article" required="true" />
   <div class="article">
     <mm:node referid="article">
+      <mm:relatednodes type="images" role="posrel" max="1" orderby="posrel.pos">
+        <mm:image mode="img" template="s(250)" />
+      </mm:relatednodes>
       <h1><mm:field name="title" /></h1>
       <h2><mm:field name="subtitle" /></h2>
       <div class="intro">
         <mm:field name="intro" escape="p,links" />
       </div>
       <mm:field name="body" escape="p,links" />
+      <mm:relatednodes type="images" role="posrel" offset="1" orderby="posrel.pos">
+        <mm:image mode="img" template="s(100)" />
+      </mm:relatednodes>
     </mm:node>
     <mm:link>
-      <a href="${_}">back</a>
+      <a class="navigate" href="${_}">&lt;&lt;</a>
     </mm:link>
+    <hr />
   </div>
 </mm:cloud>
