--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/rich-article.div.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/rich-article.div.jspx
@@ -4,6 +4,9 @@
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0"
     xmlns:jsp="http://java.sun.com/JSP/Page"
     >
+  <!--
+    xmlns:mm-rich="urn:jsptagdir:/WEB-INF/tags/mm/rich"     
+  -->
   <jsp:output omit-xml-declaration="yes" />
 
   <mm:import externid="article" required="true" />
@@ -12,13 +15,17 @@
       <h1><mm:field name="title" /></h1>
       <h2><mm:field name="subtitle" /></h2>
       <div class="intro">
-        <span class="date"><mm:field name="date"><mm:time format=":LONG" /></mm:field></span>
-        <mm:field name="intro" escape="p"  />
+        <p>
+          <span class="date"><mm:field name="date"><mm:time format=":LONG" /></mm:field></span>
+          <jsp:text> - </jsp:text>
+          <mm:field name="intro" escape="p-ommit-surrounding,links"  />
+        </p>
       </div>
-      <mm-rich:body />
+      <mm-rich:body popupwidth="800" time="100" />
     </mm:node>
     <mm:link>
-      <a href="${_}">back</a>
+      <a class="navigate" href="${_}">&lt;&lt;</a>
     </mm:link>
+    <hr />
   </div>
 </mm:cloud>
