--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/style/layout.css
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/style/layout.css
@@ -33,13 +33,27 @@ div.column h1 {
   padding-right: 1ex;
   margin-left: 0ex;
   margin-top: 0px;
+  margin-bottom: 0px;
 }
 div.column div {
   margin-top: 10px;
   margin-left: 0ex;
-  padding-bottom: 1ex;
 }
 
 div.column div h1 { 
   margin-top: 0px;
+}
+
+.article img { 
+  float: right;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
+.article hr { 
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+  margin-top: 1ex;
+  height: 0px;
+  clear: right;
+  visibility: hidden;
 }
