--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/webblock-99.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/webblock-99.jspx
@@ -11,23 +11,29 @@
   -->
   <jsp:output omit-xml-declaration="yes" />
   <mm:import externid="education" required="true" />
-  <div class="rich">
-    <h1><mm:field name="name" /></h1>
-    <mm:relatednodescontainer type="xmlnews">
-      <mm:sortorder field="begin" />
-      <mm:relatednodes>
+  <mm:relatednodescontainer type="xmlnews">
+    <mm:sortorder field="date" direction="down" />
+    <mm:time time="now" id="now" precision="minutes" write="false" />
+    <mm:constraint field="begin" operator="LESS" value="$now" />
+    <mm:constraint field="end"   operator="GREATER" value="$now" />
+    <mm:relatednodes>
+      <div class="rich article">
         <h1><mm:field name="title" /></h1>
         <h2><mm:field name="subtitle" /></h2>
         <div class="intro">
-          <span class="date"><mm:field name="date"><mm:time format=":LONG" /></mm:field></span>        
-          <mm:field name="intro" escape="p"  />
+          <p>
+            <span class="date"><mm:field name="date"><mm:time format=":LONG" /></mm:field></span>
+            <jsp:text> - </jsp:text>
+            <mm:field name="intro" escape="p-ommit-surrounding,links"  />
+          </p>
         </div>
         <mm:link referids="_node@article">
           <mm:param name="col2" value="rich-article" />
           <mm:param name="col3" value="ignore" />
-          <a href="${_}">&gt;&gt;</a>
+          <a class="navigate" href="${_}">&gt;&gt;</a>
         </mm:link>
-      </mm:relatednodes>
-    </mm:relatednodescontainer>
-  </div>
+        <hr />
+      </div>
+    </mm:relatednodes>
+  </mm:relatednodescontainer>
 </mm:node>
