--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/webblock-edit-7.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/webblock-edit-7.jspx
@@ -7,15 +7,9 @@
   <mm:import externid="webblock" required="true" />
   <p>
     <mm:node referid="webblock">
-      <mm:link referids="_node@objectnumber"
-               page="/mmbase/edit/wizard/jsp/wizard.jsp">
-        <mm:param name="templates">/editwizards/data/</mm:param>
-        <mm:param name="wizard">webblocks/news</mm:param>
-        <a href="${_}">
-          <mm:nodeinfo nodetype="xmlnews" type="plural_guinodemanager" />
-          (#<mm:countrelations  role="posrel" type="news" searchdir="destination" />)
-        </a>
-      </mm:link>
+      <mm:include page="wizard.jspx">
+        <mm:param name="type">news</mm:param>
+      </mm:include>
     </mm:node>
   </p>
 </mm:cloud>
