--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/wizard.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/wizard.jspx
@@ -11,6 +11,7 @@
              page="/mmbase/edit/wizard/jsp/wizard.jsp">
       <mm:param name="templates">/editwizards/data/</mm:param>
       <mm:param name="wizard">${wizarddir}/${type}</mm:param>
+      <mm:param name="loginmethod">delegate</mm:param>
       <a href="${_}">
         <mm:nodeinfo nodetype="${type}" type="plural_guinodemanager" />
         (#<mm:countrelations  role="posrel" type="${type}" searchdir="destination" />)
