--- a/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/column.div.jspx
+++ b/mmbase/trunk/contributions/didactor2/src/portal/templates/portal/wizards/column.div.jspx
@@ -1,4 +1,5 @@
 <mm:cloud
+    method="delegate"
     xmlns:di="http://www.didactor.nl/ditaglib_1.0"
     xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0"
     xmlns:jsp="http://java.sun.com/JSP/Page"
@@ -11,17 +12,19 @@
   <mm:content type="application/xhtml+xml">
 
     <mm:node referid="education">
-      <mm:link referids="col,_node@origin" page="/mmbase/edit/wizard/jsp/list.jsp">
-        <mm:param name="templates">/editwizards/data/</mm:param>
-        <mm:param name="wizard">webblocks/webblocks</mm:param>
-        <mm:param name="constraints">blockposrel.x = ${col}</mm:param>
-        <mm:param name="orderby">blockposrel.y</mm:param>
-        <mm:param name="nodepath">educations,blockposrel,webblocks</mm:param>
-        <mm:param name="fields">blockposrel.y,webblocks.name,webblocks.type</mm:param>
-        <mm:param name="title">Blocks for column ${col}</mm:param>
-        <mm:param name="loginmethod">delegate</mm:param>
-        <a href="${_}"><mm:nodeinfo type="plural_guinodemanager" nodetype="webblocks" /></a>
-      </mm:link>
+      <mm:hasrank minvalue="administrator">
+        <mm:link referids="col,_node@origin" page="/mmbase/edit/wizard/jsp/list.jsp">
+          <mm:param name="loginmethod">delegate</mm:param>
+          <mm:param name="templates">/editwizards/data/</mm:param>
+          <mm:param name="wizard">webblocks/webblocks</mm:param>
+          <mm:param name="constraints">blockposrel.x = ${col}</mm:param>
+          <mm:param name="orderby">blockposrel.y</mm:param>
+          <mm:param name="nodepath">educations,blockposrel,webblocks</mm:param>
+          <mm:param name="fields">blockposrel.y,webblocks.name,webblocks.type</mm:param>
+          <mm:param name="title">Blocks for column ${col}</mm:param>
+          <a href="${_}"><mm:nodeinfo type="plural_guinodemanager" nodetype="webblocks" /></a>
+        </mm:link>
+      </mm:hasrank>
       <ul>
         <mm:relatednodescontainer type="webblocks" role="blockposrel">
           <mm:constraint field="blockposrel.x" value="${col}" />
